# devops-agent

./: .gitignore  CLAUDE.md  CODEOWNERS  README.md  requirements.txt
agents/sre-guard/: CLAUDE.md  Dockerfile  pyproject.toml
agents/sre-guard/config/: sre-guard.yaml
agents/sre-guard/tests/: test_monitor.py
holmesgpt/: CLAUDE.md  CONTRIBUTING.md  Dockerfile.operator  MAINTAINERS.md  Makefile  conftest.py  mkdocs.yml  pyproject.toml  run_benchmarks_local.py  server.py
holmesgpt/.github/scripts/: eval-comment-helpers.js
holmesgpt/.github/workflows/: build-and-deploy-docs.yaml  build-and-test.yaml  eval-benchmarks.yaml
holmesgpt/docs/: community.md  index.md
holmesgpt/docs/ai-providers/: .nav.yml  aws-bedrock.md  azure-ai-foundry.md  github-copilot.md  github.md  openai-compatible.md  openrouter.md
holmesgpt/docs/data-sources/: .nav.yml  api-toolsets.md  header-propagation.md  index.md  permissions.md  recommended-setup.md  remote-mcp-servers.md
holmesgpt/docs/design/: 2026-02-24_config-editor.md
holmesgpt/docs/development/: index.md
holmesgpt/docs/installation/: backstage-integration.md  docker-compose-installation.md  k9s-installation.md  python-installation.md  teams-installation.md  ui-installation.md
holmesgpt/docs/operator/: configuration.md  deployment-verification.md  destinations.md  health-checks.md  index.md
holmesgpt/docs/overrides/: main.html
holmesgpt/docs/reference/: context-management.md  helm-configuration.md  http-api.md  kubernetes-permissions.md  teams-permissions.md  troubleshooting.md
holmesgpt/docs/snippets/: kubernetes_toolset_picker.md  secret_namespace_note.md
holmesgpt/docs/stylesheets/: extra.css
holmesgpt/docs/walkthrough/: index.md  interactive-mode.md
holmesgpt/examples/: custom_llm.py  custom_toolset.yaml
holmesgpt/examples/custom_runbook_catalog/: catalog.json
holmesgpt/experimental/ag-ui/: server-agui.py
holmesgpt/helm/holmes/: values.yaml
holmesgpt/holmes/: toolset_config_tui.py  version.py
holmesgpt/holmes/checks/: checks.py
holmesgpt/holmes/clients/: robusta_client.py
holmesgpt/holmes/common/: env_vars.py
holmesgpt/holmes/core/: azure_token.py  issue.py  json_schema_coerce.py  llm.py  models.py  oauth_config.py  oauth_utils.py  openai_formatting.py  prompt.py  safeguards.py  usage_recorder.py
holmesgpt/holmes/utils/: auth.py  config_hash.py  config_utils.py  default_toolset_installation_guide.jinja2  file_utils.py  global_instructions.py  log.py  markdown_utils.py  pydantic_utils.py  sentry_helper.py  stream.py
holmesgpt/holmes_operator/: __init__.py  config.py  models.py  operator.py  utils.py
holmesgpt/holmes_operator/client/: __init__.py  holmes_api_client.py
holmesgpt/holmes_operator/handlers/: scheduledhealthcheck.py
holmesgpt/holmes_operator/scheduler/: job_executor.py
holmesgpt/scripts/: cli_performance_benchmark.py
holmesgpt/tests/: conftest.py  test_app_imports.py  test_approval_workflow.py  test_cache.py  test_header_propagation.py  test_holmes_sync_toolsets.py  test_mcp_oauth.py  test_mcp_refresh_backoff.py  test_mcp_toolset.py  test_openai_formatting.py  test_skill_prompt.py  test_toolset_prereq_timeout.py
holmesgpt/tests/checks/: test_checks_cli.py
holmesgpt/tests/config_class/: test_alertmanager_source_factory.py  test_config_anchors.py  test_config_fast_model_flow.py  test_config_get_llm.py  test_config_load_model_list.py  test_custom_skill_paths.py
holmesgpt/tests/core/: test_llm_api_base_version.py  test_llm_completion_temperature.py  test_prompt.py  test_supabase_dal.py  test_supabase_dal_usage.py  test_todo_write_tool.py  test_usage_recorder.py
holmesgpt/tests/holmes_operator/: test_healthcheck_component.py
holmesgpt/tests/llm/: conftest.py  test_ask_holmes.py  test_compaction.py  test_holmes_checks.py
holmesgpt/tests/utils/: test_config_utils.py  test_pydantic_utils.py  test_toolset_config.py
opensre/: .dockerignore  .editorconfig  .env.example  .gitattributes  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  README.md  SETUP.md  mypy.ini  package.json  pyproject.toml  pytest.ini  ruff.toml
opensre/.claude/: settings.json
opensre/.cursor/rules/: integrations.mdc  quality.mdc  testing.mdc  tools.mdc
opensre/.devcontainer/: Dockerfile  devcontainer.json
opensre/.github/ISSUE_TEMPLATE/: bug_report.yml  improvement.yml
opensre/.github/codeql/: codeql-config.yml
opensre/.github/scripts/: good_first_issue_assign.py  merged_pr_celebration_message.py
opensre/.github/workflows/: benchmark-readme.yml  celebrate-merged-pr.yml  ci.yml  e2e-openclaw.yml  good-first-issue-assign.yml  greptile-pr-reminder.yml
opensre/app/: __init__.py  incident_window.py  llm_credentials.py  llm_reasoning_effort.py  version.py  webapp.py
opensre/app/agent/: __init__.py  chat.py  extract.py  investigation.py  prompt.py  result.py
opensre/app/agents/: __init__.py  coordination.py  discovery.py  error_signals.py  lifecycle.py  probe.py  quality.py  registry.py  sampler.py  status.py
opensre/app/analytics/: cli.py  provider.py  source.py
opensre/app/auth/: jwt_auth.py
opensre/docs/: .cspell.json  DEVELOPMENT.md  README.md  argocd.mdx  azure-monitor.mdx  betterstack.mdx  clickhouse.mdx  custom.css  datadog.mdx  deployment.mdx  faq.mdx  features.mdx  github.mdx  google-docs.mdx  honeycomb.mdx  incident_io.mdx  install.mdx  integrations-overview.mdx  jira.mdx  llm-providers.mdx  masking.mdx  multi-instance-integrations.mdx  mysql.mdx  openclaw.mdx  opsgenie.mdx  postgresql.mdx  quickstart-monitoring.mdx  quickstart.mdx  remote-runtime-investigation.mdx  sentry.mdx  sidebar.css  signoz.mdx  toc-actions.js  tracer-faq.mdx  vercel.mdx  victoria_logs.mdx
opensre/packaging/: sync_release_version.py
opensre/tests/: AGENTS.md  README.md  cli_smoke_test.py  test_datadog_adapter.py  test_datadog_provider.py  test_deployment_health.py  test_dockerfile.py  test_mongodb_atlas_integration.py  test_mongodb_integration.py  test_openclaw_integration.py  test_removed_architecture_references.py  test_sentry_init.py  test_version.py
(+3586 files in other folders)
