[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-guard"
version = "0.1.0"
description = "Persistent SRE Guard daemon — continuous service monitoring with AI-powered diagnosis"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Yash Singh", email = "yashs33244@gmail.com" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "PyYAML>=6.0.2",
    "prometheus-client>=0.21.0",
    "kubernetes>=31.0.0",
    "python-dotenv>=1.0.1",
]

[project.scripts]
sreguard = "sre_guard.cli.sreguard:cli"
sre-guard = "sre_guard.daemon:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
