[project]
name = "nightshift-worker-claude"
version = "0.1.0"
description = "Nightshift reference LLM worker — drives the Claude Agent SDK and speaks the Worker-to-Platform protocol."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk",
    "httpx>=0.27",
    # Report generators (used by artifact_tools.create_pdf/docx/xlsx/pptx).
    # The artifact tools ship in this image even though their backend
    # endpoints land in chunks 15-17; report generation runs entirely
    # in-process and only the final base64-encoded payload is uploaded.
    "weasyprint>=62.0",
    "htmldocx>=0.0.6",
    "openpyxl>=3.1",
    "python-pptx>=1.0",
    "markdown>=3.6",
    "beautifulsoup4>=4.12",
    "python-docx>=1.1",
]
